--- a/ansible/roles/linuxptp/vars/main.yml
+++ b/ansible/roles/linuxptp/vars/main.yml
@@ -3,7 +3,7 @@
 PTP_PACKAGE_NAME: 'linuxptp'
 PTP_PACKAGE_VERSION: '4.1'
 PTP_PACKAGE_TAG: "{{ 'v' + PTP_PACKAGE_VERSION }}"
-PTP_SOURCE_URL: "{{ https://github.com/richardcochran/linuxptp/archive/refs/tags/'+ PTP_PACKAGE_TAG + '.tar.gz' }}"
+PTP_SOURCE_URL: "{{ 'https://github.com/richardcochran/linuxptp/archive/refs/tags/'+ PTP_PACKAGE_TAG + '.tar.gz' }}"
 #PTP_REPO_URL: 'http://git.code.sf.net/p/linuxptp/code'
 PTP_REPO_URL: 'https://github.com/richardcochran/linuxptp.git'
 MANAGEMENT_IP_FOR_PTP: "{{ ansible_host }}"
