--- a/ansible/roles/linuxptp/tasks/for_vms.yml
+++ b/ansible/roles/linuxptp/tasks/for_vms.yml
@@ -7,14 +7,14 @@
     ignore_errors: True
 
   - block:
+    
     - include: package_dependency_install.yml
       when: (ptp4l_version.stdout == '')
+
     - include: linuxptp_fetch_n_install.yml
     when: (ptp4l_version.stdout == '') or ( ptp4l_version.stdout != (PTP_PACKAGE_VERSION) )
 
   - include: disable_chronyd.yml
-
-#  - include: generate_ptpconf_tail.yml
 
   - name: Modprobe ptp_kvm
     modprobe:
@@ -27,13 +27,11 @@
       content: |
         ptp_kvm
 
-  - name: Remove old service files
-    shell: rm -rf /lib/systemd/system/phc2sys-*.service
-
   - name: Template phc2sys for PTP Capable Interfaces in KVM
     template:
       src: templates/phc2sys.service.kvm.j2
       dest: /lib/systemd/system/phc2sys@.service
+      backup: true
       owner: root
       group: root
     
