--- a/ansible/roles/linuxptp/tasks/linuxptp_fetch_n_install.yml
+++ b/ansible/roles/linuxptp/tasks/linuxptp_fetch_n_install.yml
@@ -16,13 +16,13 @@
 - name: Run 'make clean' target as root
   become: True
   make:
-    chdir: /tmp/{{ PTP_PACKAGE_NAME }}-{{ PTP_PACKAGE_VERSION }}
+    chdir: /tmp/{{ PTP_PACKAGE_NAME }}-{{ PTP_PACKAGE_TAG }}
     target: clean
 
 - name: Run 'make install' target as root
   become: True
   make:
-    chdir: /tmp/{{ PTP_PACKAGE_NAME }}-{{ PTP_PACKAGE_VERSION }}
+    chdir: /tmp/{{ PTP_PACKAGE_NAME }}-{{ PTP_PACKAGE_TAG }}
     target: install
     params:
       prefix: '/usr'
